updated readme and added jar