@@ -1,6 +1,6 @@
-# 🏧 CSC1109 (Group 15) Automated Teller Machine (ATM)
-Command Line Interface (CLI) based ATM application designed to facilitate digital financial transactions, without the need for any direct interactions with banking staff.
-
+# 🏧 CSC1109 (Group 15) Automated Teller Machine Application
+Command Line-based ATM application designed to facilitate digital financial transactions, without the need for any direct interactions with banking staff.
+![Header](docs/cli.png)
 ## Team Members
 - Peter Febrianto Afandy (2200959)
 - Pang Zi Jian Adrian (2200692)
@@ -9,125 +9,41 @@ Command Line Interface (CLI) based ATM application designed to facilitate digita
 - Ryan Lai Wei Shao (2201159)
 
 ## List of Contents
-- [Project Scope & Assumptions](#project-scope--assumptions)
 - [System Design](#system-design)
 - [Features](#features)
 - [Project Components](#project-components)
 - [Getting Started](#getting-started)
 - [Program Usage](#program-usage)
-
-## Project Scope & Assumptions
----
-Due to the complexity of designing a bus journey planning application, this application is limited to providing bus route planning for the following bus services (as defined in the project specifications provided):
-- Loop Services
-    - P101 – Larkin Terminal ⊃ Johor Bahru City
-        - Start: Larkin Terminal
-        - End: Larkin Terminal
-    - P106 – PPR Sri Stulang ⊃ AEON Tebrau City
-        - Start: Hub PPR Sri Stulang
-        - End: Hub PPR Sri Stulang
-    - P202 – Taman Universiti ⊃ Taman Ungku Tun Aminah
-        - Start: Taman Universiti Terminal
-        - End: Taman Universiti Terminal
-    - P403 – Econsave Senai ⊃ Skudai Parade
-        - Start: Econsave Senai
-        - End: Econsave Senai
-- One-Way Services
-    - P102 – PPR Sri Stulang ⇔ Majlis Bandaraya Johor Bahru
-        - P102-01
-            - Start: Hub PPR Sri Stulang
-            - End: Majlis Bandaraya Johor Bahru
-        - P102-02
-            - Start: Majlis Bandaraya Johor Bahru
-            - End: Hub PPR Sri Stulang
-    - P211 – Taman Universiti ⇔ Larkin Terminal
-        - P211-01
-            - Start: Taman Universiti Terminal
-            - End: Larkin Terminal
-        - P211-02
-            - Start: Larkin Terminal
-            - End: Taman Universiti Terminal
-    - P411 – Kulai ⇔ Larkin Terminal
-        - P411-01
-            - Start: Kulai Terminal
-            - End: Larkin Terminal
-        - P411-02
-            - Start: Larkin Terminal
-            - End: Kulai Terminal
-
-The following bus stops were excluded (*instructed to ignore bus stops in the dataset*):
-- KFC (Road side)
-    - P202
-- Tesco Lotus (Road side)
-    - P202
-- bef Jalan Kempas Lama
-    - P211-01
-    - P411-01
-
-The following assumptions were also taken to simplify the development of the application:
-1. Assume all bus service information (ie coordinates) provided in the `bus_stop.xlsx` dataset are correct (minor corrections were made).
-2. Assume all buses will adhere to the specified bus schedule every day of the week, not taking into account any other factors (ie bus breakdowns).
-3. Assume all buses will travel at the normal speed of `70km/h`.
-4. Assume users will take a bus to travel to their destination, regardless of the distance between their starting point and ending point (ie 10 meter difference only).
+- [Database Design](#database-design)
+- [Financial Data](#financial-data)
 
 ## System Design
 ---
-This application consists of the following components:
+This application consists of two main components:
 1. Database (GCP Cloud server)
-2. Flask Web Application
+2. ATM Application
 
-This application utilises a MySQL database hosted on the cloud through the [Google Cloud Platform](https://cloud.google.com/sql). However, the application also supports the use of a local MySQL database, should the cloud server be unavailable. 
+![System Design](docs/system_design.png)
 
-The main user interface for this application is deployed using the [Flask](https://flask.palletsprojects.com/en/2.2.x/) Python web framework. The Flask application is responsible for getting all user inputs, the processing of the path to a given destination, and displaying the results to the user.
+<u>Database</u><br>
+A MySQL database hosted on the cloud through the [Google Cloud Platform](https://cloud.google.com/sql) is used to store all user and financial transaction data for this application. Should the cloud server be unavailable, the application also supports the use of a local MySQL database, which requires additional configurations. For more information on the database design and how the financial data has been integrated, click [here](#database-design). 
 
+<u>ATM Application</u><br>
+The main ATM application is packaged into a single Java ARchive (JAR) file, which compiles all project dependencies and components, for ease of execution. Various libraries are used in the application, such as [picocli](https://picocli.info/) for the main command line interface, and [Twilio](https://www.twilio.com/docs/libraries/java), which enables 2-Factor Authentication through SMS messages.
 ## Features
 ---
 <u>Database</u><br>
-A MySQL database was designed to store the bus route information. The database design is provided in the Entity Relationship Diagram below.
-![Database Design](docs/database.png)
-A high level overview of each table in the database is provided below:
-- Bus
-    - BusID (Primary Key)
-    - Name
-    - Type
-        - `1`: One-way
-        - `2`: Loop
-    - StartBusStopID
-    - EndBusStopID
-- Bus Route (Bus to Bus Stop mappings)
-    - RouteID (Primary Key)
-    - BusID
-    - BusStopID
-    - StopOrder
-        - `-1` : Loop
-        - `1, 2, ...` : Increment from 1 onwards
-- Schedule
-    - ScheduleID (Primary Key)
-    - RouteID
-    - Time
-- Bus Stop
-    - BusStopID (Primary Key)
-    - Name
-    - Longitude
-    - Latitude
-- Edge (Bus Stop Connection)
-    - EdgeID (Primary Key)
-    - FromBusStopID
-    - ToBusStopID
-    - RouteID
-- Weight
-    - WeightID (Primary Key)
-    - EdgeID
-    - Weight
-    - Type
-        - `1`: Distance
-        - `2`: Duration
+A MySQL database was designed to store the user, financial transaction and other ATM information. An in-depth explanation of the database design is provided in [this section](#database-design).
 
-<u>Pengangkutan Awam Johor (PAJ) API</u><br>
-The API provided by Malaysia's (Johor) public transportation provider, [PAJ](https://dataapi.paj.com.my/) is used during the initial population of data into the database, and the planning of routes (specifically live bus data).
 
-<u>Google Maps API</u><br>
-The [API](https://developers.google.com/maps) provided by Google Maps is used, specifically for the calculation of distances between bus stops, as well as general wayfinding to the starting bus stop and to the destination point during the last mile connectivity.
+<u>Twilio API</u><br>
+The Java API provided by [Twilio](https://www.twilio.com/docs/libraries/java) was used in this application in the implementation of user 2-Factor Authentication, through SMS text messages.
+
+<u>Beautified Colored Command Line Interface</u><br>
+To improve the user experience and make the application visually appealing for use, [picocli](https://picocli.info/) was implemented to provide a colorful user interface, delivered on the command line. 
+
+<u>Password Hashing and Encryption</u><br>
+To improve the cybersecurity aspects of this application, the SHA256 hashing algorithm was used to hash user passwords, together with a randomised given salt value. Additionally, AES256 encryption was utilised on top of the hashed password to further improve its confidentiality.
 
 
 ## Project Components
@@ -136,7 +52,9 @@ The [API](https://developers.google.com/maps) provided by Google Maps is used, s
 ```
 README.md (this file)
 
-ATM/ (contains main program)
+CSC1109-ATM.jar (executable application)
+
+ATM/ (contains application's source code)
 
 database/ (contains database and dataset programs)
 
@@ -144,106 +62,272 @@ docs/ (contains documentation images)
 
 ```
 
-There are two main components/folders for this project:
-1. Crawler
-    - Used for getting initial Bus and Bus Stop information from various sources, including the dataset provided, [BusInterchange ](https://businterchange.net/johorbus.html) website, and the API provided by Malaysia's (Johor) public transportation provider, Perbadanan Pengangkutan Awam Johor ([PAJ](https://dataapi.paj.com.my/)).
-    - Programs in this folder are generally not required to be executed as the necessary information have already been obtained, unless you are planning on setting up the database from scratch again. More instructions will be provided in the [program usage](#program-usage) section below.
-2. Flask Application
-    - Used to run the main user interface for the Journey Planner application.
-    - This folder holds all necessary program components for getting the user's inputs, processing the path to a given destination, and outputting the results.
+There are three main components/folders for this project:
+1. JAR file
+    - An executable platform-independent Java ARchive file is provided to ease the deployment and execution of this application.
+2. ATM
+    - Contains all the relevant program source code, and dependencies required.
+3. Database
+    - Contains programs used to process the given dataset, as well SQL files to set up the database.
 
 ## Getting Started
 ---
 1. Download all required [files and folders](#project-components) for this project.
-2. Ensure that you have `python3` and `pip3` installed on your machine. Click [here](https://www.python.org/downloads/) for installation instructions if they are not already installed.
-3. Install the necessary program dependencies for this project by running the following command on a terminal:
-    ```
-    pip3 install -r requirements.txt
-    ```
-    **Ensure that you are in the same working directory as the program files*
-
+2. Ensure that you have `java` installed on your machine. Click [here](https://www.java.com/en/download/help/download_options.html) for installation instructions if they are not already installed.
 
 ## Program Usage
 ---
 ### <u>Initial Project Setup</u>
-This project utilises a Cloud MySQL database that have already been pre-configured for use. You can **skip this section** if you don't plan on re-crawling and setting up the database again from scratch.
+This project utilises a Cloud MySQL database that have already been pre-configured for use. You can **skip this section** if you don't plan on setting up a local database again from scratch. <br>
 
-If you plan on just setting up a local MySQL database, follow the instructions [here](#local-database-configurations). <br>
-If you plan on setting up the entire database from scratch, follow the instructions [here](#full-database-setup). 
-
-#### Local Database Configurations
----
 Follow the instructions below to setup a local database for the application:
 1. Ensure that you have installed MySQL on your machine. For installation instructions, click [here](https://dev.mysql.com/doc/mysql-installation-excerpt/5.7/en/).
 2. On a terminal, run the following command to import the pre-configured database:
     ```
-    mysql -u<username> -p < crawler/sql/DB_24March2023.sql
+    mysql -u<username> -p < database/sql/DatabaseFull_Setup2March2023.sql
     ```
-3. Modify the configuration file in `flask_application` to connect to the local database instead of the cloud database. The following changes are required:
+3. Modify the `settings.config`configuration file in `ATM/src` to connect to the local database instead of the cloud database. The following changes are required:
     ```
-    db_host = "localhost"
-    db_user = "username"
-    db_password = "password"
-    db_schema = "DSA_JP" (Generally unchanged, unless your schema has a different name)
-    ```
-
-#### Full Database Setup
----
-Follow the instructions below to setup an empty database, and populate it with crawled data for the application:
-1. Ensure that you have installed MySQL on your machine. For installation instructions, click [here](https://dev.mysql.com/doc/mysql-installation-excerpt/5.7/en/).
-2. On a terminal, run the following command to create the bare bone database (with no data):
-    ```
-    mysql -u<username> -p < crawler/sql/DB_NoData.sql
-    ```
-3. Ensure that the following program flags are set to `True` in the crawler's configuration file (`crawler/config.py`):
-    ```
-    # Program Flags
-    LOCAL_DB = True
-    CRAWL_API = True       
-    CRAWL_WEB = True       
-    UPDATE_DB = True       
-    UPDATE_EDGES = True    
-    UPDATE_WEIGHTS = True 
-    ```
-4. Create a copy of the `local_config_bak.py` local database configuration file
-    ```
-    cp crawler/local_config_bak.py crawler/local_config.py
-    ```
-
-5. Enter your local database's configurations into the `local_config.py` file. The following information should be included:
-    ```
-    db_host = "localhost"
-    db_user = "username"
-    db_password = "password"
-    db_schema = "DSA_JP" (Generally unchanged, unless your schema has a different name)
-    ```
-6. Execute the crawler program (`crawl.py`) to obtain the required information using the following command on a terminal: <br>
-    **Ensure that you are in the `crawler/` working directory*
-    ```
-    python3 crawl.py
-    ```
-    
-    A sample output of the program's execution is provided below. You can ignore HTTP request warnings. 
-    ![Crawler Program Sample Execution](docs/crawl_output.png)
-7. Modify the configuration file in `flask_application` to connect to the local database instead of the cloud database. The following changes are required:
-    ```
-    db_host = "localhost"
-    db_user = "username"
-    db_password = "password"
-    db_schema = "DSA_JP" (Generally unchanged, unless your schema has a different name)
+    DB_HOST=localhost
+    DB_PORT=3306
+    DB_NAME=OOP_ATM (Generally unchanged, unless your schema has a different name)
+    DB_USER=username
+    DB_PASSWORD=password
     ```
 ### Program Execution
-1. Run the Flask application using the following command on a terminal:
+1. Run the ATM application using the following command on a terminal:
     <br>**Ensure that you are in the same working directory as the program files*
     ```
-    python3 flask_application/run.py 
+    java -jar --enable-preview CSC1109-ATM.jar <option>
+    
+    Available options:
+    Show all available options: -h, --help 
+    Login to ATM: Login, login, init
+    Register as a new user: register, new, signup, Registration
+
     ```
-2. Navigate to [`localhost:8080`](http://localhost:8080) on your browser, and start journey planning!
+2. Start banking with us!
 
 
-### Program Usage for Windows
-1. Instructions here...
+## Database Design
+---
+Due to the connected nature of financial data, a normalised relational database was designed to facilitate the storage and use of such data. The database is designed to be scalable, and to maintain minimal data replication. Each data table has an extra column which is used as its primary key within the database. The rationale for using an extra column for identifying each row of data is due to the use of custom formats for data such as `Account Number`, `Cheque Number` and `Transaction Number`.<br>
 
-### Program Usage for MacOS
+![Database Diagram](docs/database.png)<br>
 
-1. Instructions here...
+The database is designed to support different status for financial transactions to emulate real-life applications. For example, the `Transaction` table has a Status column that is used to indicate whether a transaction has been successfully executed, pending or failed/rejected. This status column is used in particular to mitigate fraudulent transactions, which is present in the dataset provided (more details are covered [here](#financial-data)). <br>
+
+Additionally, the database also supports real-world usecases, such as pending transactions through the inclusion of various balances for a bank user's account. In this case, three separate balances are maintained for each account, `HoldingBalance`, which is used to indicate earmarked funds or pending incoming funds, `AvailableBalance`, which is used to indicate the actual balance available for use after deduction of the holding balance, and `TotalBalance`. These balances coupled with the status of financial transactions will enable the application to function and meet the needs of real-world usecases. <br>
+
+Similarly, tables associated with cheques have varying statuses to indicate whether a cheque has been cleared, and to indicate the type of account and transaction involved (ie issuing account or receiving account, and issuing transaction or receiving transaction). <br>
+
+However, for this application, these extra columns and data are not used directly, as there are ambiguities in terms of their usage, especially since this project is just in the form of just a Proof-of-Concept. There are no easy way of verifying whether a cheque has been cleared, whether a transaction is fraudulent or not and whether a transaction has been released and deemed successful. In the real-world, there are separate systems built for these purposes alone, and varying factors are involved (ie company only charge pending transactions on a certain date). Hence, whilst the database have been specifically designed to support real-life applications, these design choices may not be directly used and implemented in this application.<br>
+
+The database consists of <b>nine</b> tables, each consisting of the following data columns:
+- User
+    - `UserID` (database identifier)
+    - Username
+    - PasswordSalt
+    - PasswordHash
+    - Email
+    - Phone
+    - AddressOne
+    - AddressTwo
+    - AddressThree
+    - Postal code
+    - RegistrationDate
+    - UserType
+        - `1`: Normal User
+        - `2`: Business User
+    - Active
+        - `1`: Active
+        - `0`: Deactivated / Disabled
+- NormalUser
+    - UserID
+    - NRIC
+    - FirstName
+    - MiddleName
+    - LastName
+    - Gender
+    - Birthday
+- BusinessUser
+    - UserID
+    - UEN
+    - BusinessName
+- Account
+    - `AccountID` (database identifier)
+    - AccountNo
+    - Name
+    - Description
+    - HoldingBalance
+    - AvailableBalance
+    - TotalBalance
+    - TransferLimit
+    - WithdrawalLimit
+    - OpeningDate
+    - Active
+        - `1`: Active
+        - `0`: Deactivated / Disabled
+- Transaction
+    - `TransactionID` (database identifier)
+    - AccountID
+        - ID of account that the transaction is associated with
+    - TransactionNo
+    - Datetime
+        - Transaction date (date at which a transaction is initiated/requested)
+    - ValueDatetime
+        - Value date refers to the effective date of a transaction (ie for cheques, it is the date that funds are released from the payer (to the bank) to the payee)
+    - Debit
+    - Credit
+    - Balance
+        - Account’s available balance after the transaction
+    - Status
+        - `-1`: Failed / Blocked
+        - `0`: Pending
+        - `1`: Successful
+    - Remarks
+- Cheque
+    - `ChequeID` (database identifier)
+    - ChequeNo
+    - IssuerAccount
+        - Account that issued the cheque
+    - RecipientAccount
+        - Account that will receive the funds released from the cheque
+    - IssuingTransaction
+        - Associated transaction for the outflow of money from issuer account
+    - ReceivingTransaction
+        - Associated transaction for the Inflow of money to recipient account
+    - Value
+    - Date
+    - Status
+        - Whether cheque has been successfully cleared (outflow from issuer, inflow to recipient accounts)
+        - `-1`: Failed / Blocked
+        - `0`: Pending
+        - `1`: Successful
+- ChequeTransaction
+    - Mapping of Transactions with Cheques
+    - ID
+    - ChequeID
+    - TransactionID
+    - Type
+        - 0: Issuing Transaction
+        - 1: Receiving Transaction
+- ChequeAccount
+    - Mapping of Accounts with Cheques
+    - ChequeID
+    - AccountID
+    - Type
+        - 0: Issuing Account
+        - 1: Receiving Account
+
+## Financial Data
+---
+To facilitate and emulate its operations, the `bank.xlsx` dataset included in the project's specifications has been integrated into the application's database.  Due to the raw and unclear formatting of the dataset, a series of data pre-processing and transformations was applied to clean the data in order to integrate it into the database designed. Before cleaning and integrating the data, preliminary data analysis was performed to understand the data.  <br>
+
+Additionally, to ease the use of the dataset, the following assumptions were taken:
+- Transactions provided in the dataset are assumed to be correct and effected successfully (no concerns over negative balances)
+    - To avoid ambiguity in edge cases (ie when an account has negative balance but is still able to withdraw money (could be a loan provided by the bank))
+- Transactions are assumed to be executed in sequential order if they have the same date due to the absence of transaction time (ie transactions from the same date but further down are assumed to have been processed after earlier transactions from the same date higher up the file)
+    - Workaround due to absence of `time` in Date column
+- All accounts are assumed to be from the same bank branch (account number formatting)
+    - Added branch code `409` to the front of the following account numbers (with zero-padding):
+        - `1196711` → `409001196711`
+        - `1196428` → `409001196428`
+---
+The following set of data cleaning was performed on each **column** of the `bank.xlsx` dataset provided:
+- TransactionNo (New Column)
+    - New column based on row index
+    - Standardised format:
+        `<8 digit no>` - `<transaction month>` - `<transaction year>`
+        
+        - 8 Digit Number
+            - Incremental
+            - Zero-padded
+        - Transaction Month
+            - `MM`
+        - Transaction Year
+            - `YYYY`
+        - Transaction month and year are based on the `date` of transaction, which was previously named `valueDate`
+        - Length: 16
+            - Example: `12345678-02-2023`
+- Account No (`Account`)
+    - Renamed to `Account`
+    - Remove trailing `'`
+    - Standardised format `<branch code>` `<accountNo>`
+        
+        - Branch Code
+            - First 3 digits of account number
+        - Account No
+            - Next 9 digits
+            - Zero-padded
+        - Length: 12
+            - Example: `409001196711`
+        - Added branch code `409` to the front of the following account numbers (with zero-padding):
+            - `1196711` → `409001196711`
+            - `1196428` → `409001196428`
+- CHQ.NO. (`ChequeNo`)
+    - Renamed to `ChequeNo`
+    - Standardised format: `<6 digit no>` : `month & year` : `<accountNo>`
+        - 6 digit no
+            - Incremental
+            - Zero-padded
+        - Month & Year
+            - `MMYYYY`
+                - Based on `Date` (date cheque was effected)
+        - Account No
+        - Length: 26
+            - Example: `873790:022023:409001196711`
+        - By utilising the specified format, duplicate cheque numbers within the dataset are separated into unique values
+            - Duplicate cheque numbers are related to three main accounts: `409000438620`, `409000438611`, `409000425051`
+            - Cheques with duplicate cheque numbers are all issued from different accounts and individually unique (thus preventing any collisions or conflicts)
+                ![Duplicate Data](docs/duplicate_data.png)     
+- VALUE DATE (`Date`)
+    - Renamed to `Date`
+        - Transaction date (date at which a transaction is initiated/requested)
+    - Format date
+- DATE (`ValueDate`)
+    - Renamed to `ValueDate`
+        - Value date refers to the effective date of a transaction (ie for cheques, it is the date that funds are released from the payer (to the bank) to the payee)
+        - Also known as Settlement Date
+    - Format date
+- DEPOSIT AMT (`Debit`)
+    - Renamed to `Debit`
+        - Debit refers to inflow of money into an account
+- WITHDRAWAL AMT (`Credit`)
+    - Renamed to `Credit`
+        - Credit refers to outflow of money from an account
+    - There are withdrawals for cents (eg. $0.01, $20.98), not possible for ATM
+        - Might be bank transfers or some deductions, not through ATM (assumed to be correct)
+- Status (New)
+    - New column to check whether the transaction is successful or not
+    - Values
+        - `-1`: Failed / Blocked
+        - `0`: Pending
+        - `1`: Successful
+- BALANCE AMT (`Balance`)
+    - Renamed to `Balance`
+    - Recalculate balances
+        - Assumptions
+            - Transactions are processed sequentially from the top-down. It is assumed that transactions with a lower index are effected earlier.
+            - It is assumed that all transactions are approved by the bank and successful
+                - To avoid ambiguity in edge cases such as when an account has negative balance but is still being able to withdraw money (could be a loan provided by the bank)
+- TRANSACTION DETAILS (`Remarks`)
+    - Renamed to `Remarks`
+    - Convert values into general values (ie 6.13e+11)
+- . (`Removed`)
+<br>
+Apart from these data processing on the dataset's columns, duplicate row entries were removed. Anomaly data were also dealt with separately, together with the following flagged transactions which were eventually deemed to be fraudulent transactions (status set to `-1`, rejected):
+![Flagged Transactions](docs/flagged_transactions.png)
+    - Record `63342` (TransactionNo: `00063319-05-2017`)
+        - Value date is earlier than requested date
+            - Date: 17/05/2017
+            - Value Date: 16/05/2017
+        - Resolved by **swapping both values**
+            - Date: 16/05/2017
+            - Value Date: 17/05/2017
+    - Transaction that have been flagged out (highlighted cells and cells with red text)
+        - Transactions are assumed to be flagged out as **potentially fraudulent transactions**
+            - Deposits from RBL Bank Ltd
+            - Deposits from and withdrawals to Gold Label Investments
+                
+        - Resolution: Transaction are not processed, status set to `0`
